--- a/Genarative AI/環境構築.md
+++ b/Genarative AI/環境構築.md
@@ -1,5 +1,19 @@
-* はじめに
+# はじめに
 
 本文書はローカル環境で生成AIを行うための構築手順を記す。
 
-* なぜ、ローカルか
+# なぜ、ローカルか
+
+ネットワークと隔絶した環境で使いたいわけですよ。
+
+# どのようにローカル環境を作るか
+
+結論から言えば、[LM Studio](https://lmstudio.ai/)を利用する。です。  
+割とまんまな検索キーワードで調べたのですが、DeepSeekがまずひっかかり、その派生であっさりと見つけることができました。
+
+## ダウンロード＆インストール
+
+1. [LM Studio](https://lmstudio.ai/) の「Download LM Studio」をクリック。
+2. インストーラをダブルクリック。マシンかユーザーか選択。
+
+
