--- a/Django/環境構築.md
+++ b/Django/環境構築.md
@@ -326,3 +326,38 @@ urlpatterns = [
 $ python manage.py runserver
 ```
 
+サーバーは別PCなので、IP指定で・・・、って、エラーになるのね。
+
+https://qiita.com/HyunwookPark/items/3cdecc83328b1b176bfb
+
+```
+$ python manage.py runserver 192.168.xxx.xxx:8000
+```
+
+で、どうだろうか。
+
+![エラー画面](img/2025_08_07%2022_21_57.png)
+
+エラー内容は変わったが、やっぱりエラー？
+
+原因は、settings.py のALLOWED_HOSTSが設定されていないからとのこと。
+
+```
+$ nano ~/myproject/myproject/settings.py
+```
+変更
+```
+ALLOWED_HOSTS = ['localhost',
+                 '127.0.0.1',
+                 '192.168.xxx.xxx',
+                ]
+```
+再起動は、Ctrl+C でサーバー止めて、再度コマンド
+```
+$ python manage.py runserver 192.168.xxx.xxx:8000
+```
+
+ようやく・・・。
+
+![トップ画面](img/2025_08_08%200_01_22.png)
+
