2025/08/09　ようやくエラーが消える

--- a/Django/環境構築.md
+++ b/Django/環境構築.md
@@ -361,3 +361,211 @@ $ python manage.py runserver 192.168.xxx.xxx:8000
 
 ![トップ画面](img/2025_08_08%200_01_22.png)
 
+### Postページ
+
+トップ画面はわかったが、たしかPostページを作っていたはず、その起動は？ということで、参照先を戻って見てみると、下記とのこと。
+
+```
+http://192.168.xxx.xxx:8000/posts
+```
+
+さて、
+
+![Posts](img/2025_08_08%200_57_35.png)
+
+### エラー修正
+
+エラー内容より、どうやら、以下のどれからしい。
+
+「Page not found (404)」は、Djangoが指定されたURL（/posts/）に対応するビューを見つけられなかったことを意味します。主な原因は以下のいずれかです：
+
+1. URL設定の問題:
+
+    urls.pyに/posts/のルーティングが正しく定義されていない。
+プロジェクト全体のurls.py（myproject/urls.py）やアプリのurls.py（myapp/urls.py）の設定ミス。
+
+
+2. アプリのURL設定がプロジェクトにインクルードされていない:
+
+    アプリ（例: myapp）のurls.pyがプロジェクトのurls.pyにinclude()されていない。
+
+
+3. ビュー関数の問題:
+
+    myapp/views.pyのpost_listビューが正しく定義されていない、またはインポートミス。
+
+4. テンプレートの問題:
+
+    post_list.htmlが見つからない、またはパスが誤っている。
+
+5. アプリの登録漏れ:
+
+    myappがsettings.pyのINSTALLED_APPSに登録されていない。
+
+6. サーバーの実行状態:
+
+    python manage.py runserverが正しく動作していない、または間違ったポートやURLにアクセスしている。
+
+1.から確認する。
+
+1. 問題なし。  
+2. myapp 以下に、urls.py がない。元のサンプルにもなかったので、これが原因かと。  
+    対応する。
+
+myapps に、urls.py を追加
+```
+$ cd ~/myproject/myapp
+$ ls
+// 無いので作成
+$ touch urls.py
+$ nano urls.py
+```
+```
+from django.urls import path
+from .views import post_list
+
+urlpatterns = [
+    path('', post_list, name='post_list'),  # /posts/でアクセス
+]
+```
+まだダメなので、先に進む。
+
+3. 問題なし
+4. 問題なし
+5. アプリの登録・・・されていない。
+```
+$ nano settings.py
+```
+```
+INSTALLED_APPS = [
+    'django.contrib.admin',
+    'django.contrib.auth',
+    'django.contrib.contenttypes',
+    'django.contrib.sessions',
+    'django.contrib.messages',
+    'django.contrib.staticfiles',
+    'myapp',    // 追加
+]
+```
+
+エラーメッセージを見る限り、myproject/urls.py に対しての
+ルーティングがうまく行われていない。
+そんなはずはないのだが、と思っていたが、
+ myproject/myproject という階層構造を思い出す。
+
+ ```
+ $ nano ~/myproject/myproject/urls.py
+ ```
+
+ admin しか設定されていないため、更新
+
+ ```
+from django.contrib import admin
+from django.urls import path, include
+
+urlpatterns = [
+    path('admin/', admin.site.urls),  # 既存の管理画面パス
+    path('posts/', include('myapp.urls')),  # myappのURLをインクルード
+]
+ ```
+
+どうやら、myproject/urls.py の方は誤りらしい。  
+間違えて打ち込んじゃったかな？  
+
+とは言え、実はまだうまくいっていない…。  
+
+![エラー](img/2025_08_09_13_56_13.png)
+
+### エラー修正（再マイグレーション）
+
+メッセージから対象となるテーブルが無いとのこと。  
+そのため、再度マイグレーションを実行する。
+```
+$ cd ~/myproject
+// myapp　とアプリケーション名を付けることで、特定のアプリケーションディレクトリに対してマイグレーションを行う。
+$ python manage.py makemigrations myapp
+// myapp_djago_1st とデータベース名を付けることで、特定のデータベースに対して、テーブルを作成する。
+$ python manage.py migrate myapp_django_1st
+Operations to perform:
+  Apply all migrations: myapp
+Running migrations:
+  Applying myapp.0001_initial... OK
+```
+
+成功かな？  
+サービスリロードしたところ、エラーは消えた。
+
+![post](img/2025_08_09_14_54_59.png)
+
+### Django の階層構造について
+
+```
+myproject/                  # プロジェクトルートディレクトリ
+├── manage.py              # Djangoの管理コマンド用スクリプト
+├── .env                   # 環境変数ファイル（前述の設定）
+├── myproject/             # 設定用ディレクトリ（プロジェクト設定）
+│   ├── __init__.py
+│   ├── settings.py       # プロジェクト全体の設定（DB接続等）
+│   ├── urls.py           # プロジェクト全体のURL設定
+│   ├── asgi.py
+│   └── wsgi.py
+├── myapp/                 # アプリケーションディレクトリ
+│   ├── __init__.py
+│   ├── admin.py
+│   ├── apps.py
+│   ├── migrations/
+│   ├── templates/        # view から参照
+│   ├── models.py         # モデル定義
+│   ├── tests.py
+│   ├── views.py          $ ビュー定義
+│   └── urls.py           # アプリ専用のURL設定（自分で作成）
+└── requirements.txt      # 依存関係ファイル
+```
+
+#### myproject の urls.py
+
+- 役割:
+    - プロジェクト全体のURLルーティングを管理。
+    - すべてのリクエストのエントリーポイントとして機能し、URLを適切なアプリやビューに振り分ける。
+    - 通常、アプリごとのurls.pyをinclude()で参照し、モジュラー化を図る。
+    - 管理画面（admin/）やプロジェクト全体で共有するURL（例: ルートURL /）を定義。
+- 特徴:
+    - プロジェクト全体の「入り口」として、アプリ間のURLを統括。
+    - アプリが増えても、個々のアプリのurls.pyをインクルードすることで管理が容易。
+- 使用場面:
+    - プロジェクト全体のURL構造を設計。
+    - 複数のアプリ（例: myapp, anotherapp）のURLを統合。
+    - 管理画面や静的ファイル、トップページなど、アプリに依存しないURLを定義。
+- 例
+    ```
+    urlpatterns = [
+        path('admin/', admin.site.urls),
+        path('posts/', include('myapp.urls')),  # ブログアプリ
+        path('users/', include('userapp.urls')),  # ユーザー管理アプリ
+        path('', include('homeapp.urls')),  # トップページ
+    ]
+    ```
+#### myapp の urls.py
+
+- 役割:
+    - 特定のアプリ（例: myapp）専用のURLルーティングを管理。
+    - アプリ固有の機能（例: 投稿一覧、投稿詳細など）のURLを定義。
+    - プロジェクトのurls.pyからinclude()で参照され、アプリ内のビューにマッピング。
+- 特徴:
+    - アプリごとの独立したURL管理が可能。
+    - アプリを他のプロジェクトに再利用する際に、URL設定を持ち運べる。
+- 使用場面:
+    - アプリ固有の機能（例: 投稿一覧、投稿作成、投稿編集）のURLを定義。
+    - アプリをモジュラー化し、他のプロジェクトで再利用可能にする。
+- 例
+    ```
+    from django.urls import path
+    from .views import post_list, post_detail, post_create
+
+    urlpatterns = [
+        path('', post_list, name='post_list'),  # /posts/
+        path('<int:pk>/', post_detail, name='post_detail'),  # /posts/1/
+        path('create/', post_create, name='post_create'),  # /posts/create/
+    ]
+    ```
+
