2025/08/09　管理者ページ

--- a/Django/環境構築.md
+++ b/Django/環境構築.md
@@ -569,3 +569,62 @@ myproject/                  # プロジェクトルートディレクトリ
     ]
     ```
 
+## admin ページを利用する。
+
+Django には、既定の管理者ページがある。  
+※それを見て選定したともいう。
+
+ということで、ログインしてみよう。
+
+```
+http://192.168.xxx.xxx:8000/admin
+```
+
+ふむふむ。IDとパスワード・・・。  
+そういえば、ユーザー登録していないね。
+
+### 1. 管理者アカウント作成
+
+```
+(venv)$ cd myproject
+(venv)$ python manage.py createsuperuser
+```
+ID と メールアドレス、Password を求められる。
+
+改めてログインする。
+
+![管理ページ](img/2025_08_09_20_09_47.png)
+
+グループとユーザーのみの管理者ページが表示される。  
+ふむ・・・。  
+
+### 2. モデルの登録
+
+```
+(venv)$ nano ~/myproject/myapp/admin.py
+```
+更新
+```
+from django.contrib import admin
+
+# Register your models here.
+from django.contrib import admin
+from .models import Post
+
+admin.site.register(Post)
+```
+
+ユーザー登録の下に、myapp が追加された。
+
+![Add myapp](img/2025_08_09_21_35_32.png)
+
+
+Myapp の Posts 
+
+![Reg Posts](img/2025_08_09_21_39_33.png)
+
+登録して、Postsページを見てみる。
+
+![Posts](img/2025_08_09_21_40_14.png)
+
+おお！
