--- a/Django/環境構築.md
+++ b/Django/環境構築.md
@@ -628,3 +628,77 @@ Myapp の Posts
 ![Posts](img/2025_08_09_21_40_14.png)
 
 おお！
+
+## Git による履歴管理
+
+少しずつ開発を進めていく中、そろそろ履歴管理が必要では・・・ということで。
+
+### 1. Git リポジトリの初期化
+
+```
+// git がインストールされているか
+$  git --version
+git version 2.43.0
+
+// ユーザー登録
+$ git config --global user.email "hogehoge@gmail.com"
+$ git config --global user.name "hogehoge"
+
+// git リポジトリ初期化
+$ cd ~/myproject        // Djangoのプロジェクトルートに移動
+$ git init
+
+// 除外設定作成
+$ touch .gitignore
+```
+
+.gitignore 記入内容  
+参考: [GitHubのDjango用.gitignoreテンプレート](https://github.com/github/gitignore/blob/main/Python.gitignore)
+```
+# Django関連
+*.pyc
+__pycache__/
+*.pyo
+*.pyd
+*.sqlite3
+*.sqlite3-journal
+*.log
+*.pot
+*.egg-info/
+dist/
+build/
+
+# 環境変数
+.env
+
+# 仮想環境
+venv/
+env/
+.venv/
+
+# ローカル開発データベース
+db.sqlite3
+
+# メディア/静的ファイル（本番では別管理）
+media/
+staticfiles/
+
+# IDEやエディタ関連
+.idea/
+*.swp
+.vscode/
+```
+
+- .envは機密情報（DB_PASSWORDなど）を含むため、Gitに含めない。
+- PostgreSQLを使用しているのでdb.sqlite3は不要だが、念のため記載。
+
+### 2. 初期コミット
+
+```
+$ cd ~/myproject
+$ git add .
+$ git commit -m "1st Commit of Django5 project"
+```
+
+とりあえず、ここまで。
+
